--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-index.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +14,6 @@ index.html
   <h3>Fecha: 11 de Febrero de 2022</h3>
 <br>Celular: 3003375659</br>
 <p>Skype: juanjoseromero </p>
-<p>Correo: juanjoseromerojimenez10@gmail.com </p> 
+<p>Correo: juanjoseromero10@gmail.com </p> 
 </body>
-</html>
+</html
