--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <br>Celular: 3003375659</br>
 <p>Skype: juanjoseromero </p>
 <p>Correo: juanjoseromero10@gmail.com </p> 
+
+<a href="fase2/design.html"></a>
+
 </body>
-</html
+</html>
