--- a/fase3/autor.html
+++ b/fase3/autor.html
@@ -55,7 +55,7 @@
         <br> Correo: juanjoseromerojimenez10@gmail.com
         <br> autor:Juan Jose Romero Jimenez
         <br> Skype:juanjosermerojimenez
-        <br> Fecha: 21 de Marzo de 2022
+        <br> Fecha: 1 de Abril de 2022
 
         <br> <img src="img/20220321_103348.jpg" width="300" height="300" alt="">
 
