--- a/fase3/aprendizaje.html
+++ b/fase3/aprendizaje.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1>Etiquetas Básicas de HTML, atributos y valores</h1>
+        <h1>Etiquetas Básicas de HTML, Atributos y Valores</h1>
     </header>
 
     <nav>
