--- a/fase4/aprendizaje.html
+++ b/fase4/aprendizaje.html
@@ -15,48 +15,39 @@
         <h1>Etiquetas Básicas de HTML, Atributos y Valores</h1>
     </header>
 
-    <nav> <ul>
+    <nav>
         <li><a href="inicio.html">Inicio</a></li>
-        <li>Temas 
+        <li><a href="#">Temas</a>
             <ul>
                 <li><a href="tema1.html">Tema 1</a> </li>
                 <li><a href="tema2.html">Tema 2</a> </li>
             </ul>
         </li>
-        <li>Recursos Digitales
+        <li><a href="#">Recursos Digitales</a>
             <ul>
                 <li> <a href="multimedia1.html">Recursos 1</a> </li>
                 <li> <a href="multimedia2.html">Recursos 2</a> </li>
             </ul>
-        
+
         </li>
-        <li>Aprendizaje
+        <li><a href="#">Aprendizaje</a>
             <ul>
                 <li> <a href="#">Actividad 1</a></li>
                 <li><a href="#">Actividad 2</a></li>
             </ul>
-        
-        </li>
-        <li> <a href="autor.html">Acerca del autor </a> </li>
-        </ul></nav>
-    <div class="Contenido">  </div>
 
-    <aside>
-        <iframe
-        src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fm.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=400&height=610&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-        width="400" height="610" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-    </aside>
+            <li> <a href="autor.html">Acerca del autor </a> </li>
+
+    </nav>
+    <div class="Contenido">
+
+    </div>
 
     <footer>
         <br> Correo: juanjoseromerojimenez10@gmail.com
         <br> autor:Juan Jose Romero Jimenez
         <br> Skype:juanjosermerojimenez
-        <br> Fecha: 1 de Abril de 2022
-
-        <br> <img src="img/20220321_103348.jpg" width="300" height="300" alt="">
-
+        <br> Fecha: 21 de Marzo de 2022
     </footer>
 
 </body>
