--- a/fase4/inicio.html
+++ b/fase4/inicio.html
@@ -35,8 +35,8 @@
                 </li>
                 <li>Aprendizaje</a>
                     <ul>
-                        <li> <a href="#">Actividad 1</a></li>
-                        <li><a href="#">Actividad 2</a></li>
+                        <li> <a href="aprendizaje1.html">Actividad 1</a></li>
+                        <li><a href="aprendizaje2.html">Actividad 2</a></li>
                     </ul>
 
                 </li>
