--- a/fase4/tema2.html
+++ b/fase4/tema2.html
@@ -33,8 +33,8 @@
         </li>
         <li>Aprendizaje
             <ul>
-                <li> <a href="#">Actividad 1</a></li>
-                <li><a href="#">Actividad 2</a></li>
+                <li> <a href="aprendizaje1.html">Actividad 1</a></li>
+                <li><a href="aprendizaje2.html">Actividad 2</a></li>
             </ul>
 
         </li>
