--- a/fase4/aprendizaje2.html
+++ b/fase4/aprendizaje2.html
@@ -80,7 +80,7 @@
             </div>
         </nav>
     </nav>
-    <div class="Contenido">
+    <div class="col-nd-8" Seccion lateral>
         <section>
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSf_mtRf_EnMXiU_QARP1mZC86DouYn4kOHOkWGQzBIY-TYaLQ/viewform?embedded=true"
