--- a/fase4/tema1.html
+++ b/fase4/tema1.html
@@ -97,7 +97,7 @@
 
 
             </p>
-            <img src="img/HTML - Etiquetas básicas.png" width="600" height="400" alt="Etiquetas">
+            <img src="img/HTML - Etiquetas básicas.png"  alt="" width="60%" alt="Etiquetas">
             </p>
 
            
