--- a/fase4/aprendizaje2.html
+++ b/fase4/aprendizaje2.html
@@ -80,7 +80,7 @@
             </div>
         </nav>
     </nav>
-    <div class="col-nd-8" Seccion lateral>
+    <div >
         <section>
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSf_mtRf_EnMXiU_QARP1mZC86DouYn4kOHOkWGQzBIY-TYaLQ/viewform?embedded=true"
@@ -89,13 +89,13 @@
 
         <aside>
 
-            <iframe
+            <iframe  
                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fm.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=400&height=610&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                 width="400" height="610" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                 allowfullscreen="true"
                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
-        </aside>
+       
     </div>
 
 
