--- a/fase4/inicio.html
+++ b/fase4/inicio.html
@@ -105,7 +105,7 @@
             <iframe
                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fm.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=400&height=610&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                 width="400" height="610" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                allowfullscreen="false" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
              ></iframe>
         </aside>
     </div>
